fix section height on mobile

--- a/app/assets/stylesheets/style/style-mobile.scss
+++ b/app/assets/stylesheets/style/style-mobile.scss
@@ -88,6 +88,9 @@
 				padding: 3em 10px 3em 10px;
 			}
 
+			.main.style3 .content {
+				margin-top: 0em;
+			}
 /*********************************************************************************/
 /* Header                                                                        */
 /*********************************************************************************/
